<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFF8DC"
    tools:context=".Main">


    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recipe_spinner"> </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        android:id="@+id/spinner_nameHint"
        android:layout_below="@+id/recipe_spinner"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        android:id="@+id/spinner_foodName"
        android:layout_below="@+id/recipe_spinner"
        android:layout_toRightOf="@+id/spinner_nameHint"
        android:layout_toEndOf="@+id/spinner_nameHint"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_foodCategory"
        android:id="@+id/spinner_foodCategory"
        android:layout_below="@+id/spinner_nameHint"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_foodType"
        android:text="@string/spinner_foodType"
        android:layout_toRightOf="@+id/spinner_foodName"
        android:layout_below="@+id/spinner_foodName"
        android:layout_toEndOf="@+id/spinner_foodName"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_foodRating"
        android:text="@string/spinner_recipeRating"
        android:layout_below="@+id/spinner_foodCategory"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_tasteRating"
        android:text="@string/spinner_testRating"
        android:layout_toRightOf="@+id/spinner_foodCategory"
        android:layout_below="@+id/spinner_foodCategory"
        android:layout_toEndOf="@+id/spinner_foodCategory"
        android:layout_marginTop="10dp"/>




</RelativeLayout>
